--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ local_settings.py
 # Virtual environment
 venv/
 .venv/
+.venv_low/
 ENV/
 env/
 
@@ -62,3 +63,6 @@ secrets.json
 dist/
 build/
 eggs/
+
+# Gitignore
+.gitignore
